# isaeli-lottory

./: README.md  pyproject.toml
data/: lotto-history.csv
lotto/: __init__.py  __main__.py  analysis.py  data.py  patterns.py  patterns_cli.py  validate.py  validate_cli.py
rules/: LOTTO_RULES.json  LOTTO_RULES.yaml
